Fixed border stretching

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     /* background-color: blue; */
     /* border: 1px solid #000; */
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
 .news-image {
@@ -32,16 +32,18 @@
 }
 
 figure {
+    max-width: 750px;
     background-color: black;
     display: inline-block;
     border: 1px solid white;
 }
 
 figcaption {
+    max-width: 750px;
     text-align: center;
     background-color: black;
     margin:auto;
-}
+ }
 
 
 body {
